# zeta-dirichlet

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mingw64.cmake  solutions.txt
.cache/clangd/index/: acb_matrix.cpp.DA888581FC45C34F.idx  acb_matrix.hpp.1F4E35347ADF42D2.idx  acb_vector.cpp.B14FEDEAE1FD8EA8.idx  acb_vector.hpp.1E32EE3F04DF5AF0.idx  dirichlet_series.cpp.DCDF63F91C685AFF.idx  dirichlet_series.hpp.F280439591190357.idx  main.cpp.F4526F78A2B77E68.idx  plot_panel.cpp.28A0E89BD04E41BF.idx  plot_panel.hpp.A28859A95C2AA3A6.idx  reader.cpp.092075813DD94EF5.idx  reader.hpp.9F999025BA36DF22.idx  reader_solutions.cpp.89E0BE8BDC3882F5.idx  reader_solutions.hpp.92BD6CCF3642DCF5.idx  solver.cpp.F9592E1AAA72C335.idx  solver.hpp.644CF4F20E1C416D.idx  utils.hpp.3991D1AE6BB398DF.idx  zeta_app.cpp.C192AE548BDDFD13.idx  zeta_app.hpp.A68179883CCAC0B7.idx  zeta_frame.cpp.6B55258E2BD41501.idx  zeta_frame.hpp.CB05A7BE7DD7C007.idx
acb-wrappers/: CMakeLists.txt
acb-wrappers/include/acb_wrappers/: common.hpp  matrix.hpp  vector.hpp
acb-wrappers/src/: matrix.cpp  vector.cpp
docs/: meeting0.tex  meeting1.tex
flint-wrappers/: CMakeLists.txt
flint-wrappers/include/flint_wrappers/: common.hpp  complex.hpp  matrix.hpp  real.hpp  vector.hpp
flint-wrappers/src/: matrix.cpp  vector.cpp
hdrs/: acb_matrix.hpp  acb_vector.hpp  dirichlet_series.hpp  nested_systems_solver.hpp  reader_solutions.hpp  solver.hpp  utils.hpp
include/: acb_matrix.hpp  acb_vector.hpp  dirichlet_series.hpp  nested_systems_solver.hpp  plot_panel.hpp  reader.hpp  reader_solutions.hpp  solver.hpp  zeta_app.hpp  zeta_frame.hpp
src/: acb_matrix.cpp  acb_vector.cpp  acb_vector.hpp  dirichlet_series.cpp  main.cpp  nested_systems_solver.cpp  plot_panel.cpp  reader.cpp  reader.hpp  reader_solutions.cpp  solver.cpp  solver.hpp  temp.py  zeta_app.cpp  zeta_frame.cpp
zeta/: CMakeLists.txt
zeta-gui/: CMakeLists.txt  layout.fbp
zeta-gui/include/: plot_panel.hpp  shared.hpp  zeta_app.hpp  zeta_frame.hpp  zeta_frames.h
zeta-gui/src/: layout.fbp  main.cpp  new_file_frame_handlers.cpp  plot_panel.cpp  rendering_settings_frame_handlers.cpp  resources.rc  shared.cpp  zeta_app.cpp  zeta_frame.cpp  zeta_frame_handlers.cpp  zeta_frames.cpp
zeta/include/: common.hpp  dirichlet_series.hpp  nested_systems_solver.hpp  reader.hpp  reader_solutions.hpp  solver.hpp  utils.hpp
zeta/src/: dirichlet_series.cpp  nested_systems_solver.cpp  reader.cpp  reader_solutions.cpp  solver.cpp
